-------
v2.5.10
-------




------
v2.5.9
------

[mjr] PHP 7.4 compatibility fixes (Remi Collet <remi@famillecollet.com>, PR
      #2).
[jan] Fix wrapping if the wrapping break adds indention.


------
v2.5.8
------

[mjr] Fix detecting certain types of broken UTF-8 strings.


------
v2.5.7
------

[jan] Mark PHP 7 as supported.


------
v2.5.6
------

[jan] Fix test that could fail due to changes in glibc.
[jan] Fix Composer file.


------
v2.5.5
------

[mms] Fix handling broken text input with all multibyte drivers.


------
v2.5.4
------

[mms] Fix error detection when using Horde_String::substr() with mb_substr().


------
v2.5.3
------

[jan] Use grapheme functions in Horde_String if intl extension is available.


------
v2.5.2
------

[mms] Fix deleting multi-level temporary directories in
      Horde_Util::deleteAtShutdown().


------
v2.5.1
------

[mms] Fix another issue with older versions of PHP in
      Horde_String_Transliterate.


------
v2.5.0
------

[mms] Fix regression in Horde_String_Transliterate for PHP 5.3 (Bug #13419).
[mms] Added Horde_String::ipos() and Horde_String::ripos().


------
v2.4.1
------

[mms] Fallback to lesser priority transliterator driver when an error is
      encountered.


------
v2.4.0
------

[mms] Add Horde_String_Transliterate class.
[mms] Support deeply nested HTML documents (requires PHP 5.4.0+ and libxml
      2.7.0+) (Bug #13086).


------
v2.3.0
------

[mms] SECURITY: '_formvars' form input must now be JSON encoded, not PHP
      serialized.


------
v2.2.2
------

[mms] Fix Horde_Domhtml#returnBody().


------
v2.2.1
------

[mms] Simplify Horde_Variables iterator.


------
v2.2.0
------

[mms] Can't add charset directly to HTML document or else DOM will alter
      document when generating HTML.
[mms] Added Horde_Domhtml#getBody().


------
v2.1.0
------

[mms] Added 'charset' and 'metacharset' parameters to returnHtml().
[mms] Added Horde_Domhtml#getCharset() to get best-guess charset of current