@@ -21,8 +21,8 @@
             "role": "developer"
         }
     ],
-    "version": "2.5.9",
-    "time": "2019-11-03",
+    "version": "2.5.10",
+    "time": "2022-06-18",
     "repositories": [
         {
             "type": "pear",
